vaapi: filter out DELAYED_PIC_REF flag to determine field.

This fixes ticket #23.

(cherry picked from commit 621f4c98df4ee9fd604a614f31e09eef9dd7d3ca)

Signed-off-by: Reinhard Tartler <siretart@tauware.de>